--- a/projects.html
+++ b/projects.html
@@ -39,7 +39,7 @@
                 </td>
                 <td class ="right">
                     <p class="white">For this project, my group and I built AI models to predict medical insurance costs. I used a Gradient Boosting model, achieving 85% accuracy and identifying key factors in predicting healthcare costs.</p>
-                    <p class="white">Check out my code <a href="#">here</a> and my group's report <a href="#">here.</a></p>
+                    <p class="white">Check out my code <a href="https://github.com/dexk0/IS427_AI_Project">here</a> and my group's report <a href="projects/AI_Report.pdf">here.</a></p>
                 </td>
             </tr>
             <tr>
@@ -62,7 +62,6 @@
                 </td>
                 <td class ="right">
                     <p class="white">I worked with a team as Lead Programmer to build a functional website for a dance studio. In this role, it was my responibility to assist the team with meeting deadlines as well as ensuring the consistency and quality of the codebase.</p>
-                    <p class="white">Check out my code <a href="#">here</a> and my group's report <a href="#">here.</a></p>
                 </td>
             </tr>
             <tr>
@@ -75,7 +74,7 @@
                 <td class ="right">
                     <p class="white">
                         I collaborated with a team to propose a new helpdesk ticketing system for the school's AV department. We started by asking discovery questions to understand the problem, then documented our solution with detailed tables and data flow diagrams.</p>
-                    <p class="white">View my group's 54 page report <a href="#">here.</a></p>
+                    <p class="white">View my group's 54 page report <a href="projects/Final_Integrated_Capstone_Project.pdf">here.</a></p>
                 </td>
             </tr>
         </table>
