--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Page Title</title>
+    <title>Dexter Kong, Seeking new Challenges</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href="css/main.css" rel="stylesheet" type="text/css">
 </head>
