--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <!-- <p>Welcome to my online portfolio, a digital showcase of my passion and creativity. Explore the intersection of my skills, experiences, and projects, and get a glimpse into the unique journey that shapes my work. Feel free to wander, linger, and discover the stories behind each creation. Thank you for stopping by—I hope you find inspiration within these digital walls.</p> -->
         <div class="pBlue"><p>Hi. I'm Dexter.</p></div>
         <p><span class="white">I'm a student studying at University of Maryland, Baltimore County. Currently, I am pursuing a B.S. in Information Systems. <br>
-        Set to <span class="purple">Graduate</span> in <span class="purple">May 2024</span></span></p>
+        <span class="purple">Graduated</span> as of <span class="purple">May 2024</span></span></p>
         <p><span class="white">Click <a href="about.html">here</a> to get to know me.</span></p>
         <p><span class="white">Click <a href="projects.html">here</a> to view my projects</span></p>
     </div>
